syntax = "proto3";

package Contracts.Services.Cart.Protobuf;

import "Abstractions/Abstractions.proto";

service Carter {
  rpc ListDishCartQuery (GetListCartRequest) returns (GetListCartReply);
  rpc GetQuantity (GetListCartRequest) returns (GetQuantityReply);
}

message CartRestaurantReply {
	string Name = 1;
	string Phone = 2;
	string Address = 3;
}

message GetCartDetail {
	string Id = 1;
	string RestaurantId = 2;
	string CustomerId = 3;
	string DishId = 4;
	CartRestaurantReply Restaurant = 5;
	string Name = 6;
	string Image = 7;
	int64 Price = 8;
	int32 Quantity = 9;
}

message GetListCartRequest {
	string CustomerId = 1;
}

message GetListCartReply {
	repeated GetCartDetail List = 1;
}

message GetQuantityReply{
	int32 Quantity = 1;
}

message CartDetails{
	string Id = 1;
	string CustomerId = 2;
	Abstractions.Protobuf.Person Customer = 3;
	string Description = 4;
	double Total = 5;
	string Status = 6;
}

message CartItems{
	string Id = 1;
	string CartId = 2;
	string RestaurantId = 3;
	string DishId = 4; 
	Abstractions.Protobuf.Person Restaurant = 5;
	Abstractions.Protobuf.Dish Dish = 6; 
	Abstractions.Protobuf.Price Price = 7;
	int32 Quantity = 8;
	string Note = 9;
	bool Choose = 10;
	bool CheckOut = 11;
}